# computorv1

./: .dockerignore  CHANGELOG.md  Dockerfile  Makefile  compurtov1.cabal
app/: Main.hs  Parser.hs  Utils.hs
src/: Parser.hs  PolynomialTypes.hs  Utils.hs
src/Polynomials/: Arithmetic.hs  Types.hs
test/: ParserTest.hs  Tests.hs  UtilsTest.hs
