cabal-version:      3.0

name: Compurtov1

version:            0.1

license: MIT

author: gvitor-s

maintainer: gvitor-s@student.42sp.org.br

build-type: Simple

extra-doc-files:    CHANGELOG.md

common common-settings
    ghc-options: -Wall -Wextra -Werror

library source
  import: common-settings

  exposed-modules:
    Parser
    Utils
    Polynomials.Types
    Polynomials.Arithmetic

  hs-source-dirs: src

  build-depends: base ^>=4.17.2.1

  default-language: Haskell2010

executable Compurtov1
    import: common-settings

    main-is: Main.hs

    hs-source-dirs: app

    build-depends: base ^>=4.17.2.1, containers, source

    default-language: Haskell2010

common test-settings
  build-depends: base ^>=4.17.2.1, HUnit, Cabal, source
  other-modules: Tests
  hs-source-dirs: test
  default-language: Haskell2010

Test-Suite ParserTest
  import: test-settings
  type: detailed-0.9
  test-module: ParserTest

Test-Suite UtilsTest
  import: test-settings
  type: detailed-0.9
  test-module: UtilsTest
